# mini-agent-harness

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/: handoff-context.md
.cursor/rules/: engineering-workflow.mdc  mini-agent-core.mdc  python-quality.mdc
docs/: demo.md
docs/architecture/: agent-execution-flow.md
docs/evaluations/: badcases.md  controlled-experiment.md  evaluation-methodology.md
docs/plans/: month-01-roadmap.md  week-01-foundation.md  week-02-llm-client.md  week-03-tool-system.md  week-04-tracking-evaluation.md
evals/fixtures/sample_repository/: .env  README.md
evals/results/badcases/: bc1_repeated_list_files.json  bc2_wrong_tool_choice.json  bc3_keyword_false_positive.json  index.json
evals/results/controlled_experiment/: summary.json
evals/results/demo/: report.json  report.md
evals/tasks/: repository_tasks.json
scripts/: check.sh  generate_badcase_artifacts.py  run_evaluation.py  run_evaluation_demo.py  run_traced_smoke.py
src/mini_agent/: config.py  exceptions.py  logging_config.py  main.py
src/mini_agent/agent/: loop.py  models.py
src/mini_agent/evaluation/: loader.py  (+4 more)
tests/: test_config.py
tests/agent/: test_agent_integration.py  test_loop.py  test_loop_tracing.py
tests/evaluation/: test_loader.py  test_models.py  test_report.py  test_runner.py  test_scorers.py
tests/llm/: test_deepseek_client.py  test_models.py  test_stream_parser.py  test_tool_schema.py
tests/tools/: test_list_files.py  test_read_file.py  test_registry.py  test_search_text.py  test_workspace.py
tests/tracing/: test_recorder.py
(+19 files in other folders)
