[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-agent-harness"
version = "0.1.0"
description = "A minimal agent harness built from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mini_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["mini_agent"]
strict = false
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = true
init_forbid_extra = true